--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "congo",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Congo is a thin wrapper for node-mongodb-native that makes connections and collections a little easier.",
   "main": "congo.js",
   "keywords": [
@@ -18,6 +18,6 @@
     "jasmine-node": "~1.7.0"
   },
   "scripts": {
-    "test": "jasmine-node --verbose spec --config test true"
+    "test": "./node_modules/jasmine-node/bin/jasmine-node --verbose spec --config test true"
   }
 }
