--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "mongodb": "~1.2.14",
     "underscore": "~1.4.4",
-    "async": "~0.2.8",
-    "jasmine-node": "~1.7.0"
+    "async": "~0.2.8"
+  },
+  "devDependencies": {
+    "jasmine-node": "~1.7.1"
   },
   "scripts": {
     "test": "./node_modules/jasmine-node/bin/jasmine-node --verbose spec --config test true"
